--- a/v0/app/src/main/res/values/strings.xml
+++ b/v0/app/src/main/res/values/strings.xml
@@ -1,15 +1,38 @@
 <resources>
     <string name="app_name">Monumental v0</string>
+
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign in</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="sign_up">Sign up</string>
+    <string name="sign_in_with_google">Continue with Google</string>
+    <string name="sign_in_with_facebook">Continue with Facebook</string>
+    <string name="message_loading">Loading, please wait…</string>
+    <string name="error_password">Password must be at least 6 characters long.</string>
+    <string name="error_email">Not a valid address.</string>
+    <string name="message_sign_in_cancelled">Sign in attempt cancelled.</string>
+    <string name="warning_sign_in_provider">Failed to sign in with third party provider</string>
+    <string name="warning_sign_in_email">There was a problem signing in, please check your credentials and your internet connection!</string>
+    <string name="fb_login_protocol_scheme">fb372591466897067</string>
+
+    <!-- Venue categories -->
+    <string name="cat_monument">Monuments</string>
+    <string name="cat_public_art">Public art</string>
+    <string name="cat_stadium">Stadiums</string>
+    <string name="cat_bridge">Bridges</string>
+    <string name="cat_castle">Castles</string>
+    <string name="cat_historic_site">Historic sites</string>
+    <string name="cat_museum">Museums</string>
+    <string name="cat_opera_house">Opera houses</string>
+    <string name="cat_theatre">Theatres</string>
+
+    <!-- Splash screen activity-->
+    <string name="title_activity_splashscreen">SplashscreenActivity</string>
+    <string name="cd_logo">Application logo</string>
+
+    <!-- Home Activity-->
     <string name="title_activity_home">HomeActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -17,40 +40,37 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="facebook_app_id">372591466897067</string>
-    <string name="fb_login_protocol_scheme">fb372591466897067</string>
 
+    <!--StartFragment-->
+    <string name="cd_header">Header Image</string>
+    <string name="message_journey_start">*Insert inspirational quote here*</string>
+    <string name="ready">Ready</string>
+    <string name="warning_gps_required">GPS access is required to go further!</string>
 
-    <string name="title_activity_splashscreen">SplashscreenActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="login_icon">Login</string>
-    <string name="login_or_options">-or-</string>
-    <string name="sign_in_with_google">Continue with Google</string>
-    <string name="label_placeholder">Placeholder</string>
-    <string name="cd_logo">Application logo</string>
-    <string name="sign_in_with_facebook">Continue with Facebook</string>
-    <string name="message_loading">Loading, please wait…</string>
-    <string name="action_sign_out">Sign Out</string>
-
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="message_journey_start">Your journey starts here</string>
+    <!--DetailsFragment-->
     <string name="label_select_radius">Adjust the search radius</string>
-    <string name="value_limit_default">10</string>
     <string name="label_limit_landmarks">Limit the number of landmarks</string>
+    <string name="value_limit_default">10</string>
     <string name="cd_dec_val">Decrease value</string>
     <string name="cd_inc_val">Increase value</string>
-    <string name="next">Next</string>
     <string name="radius_default">1000 m</string>
+    <string name="next">Next</string>
+    <string name="grant">Grant</string>
+
+    <!--CategoriesFragment-->
     <string name="label_choose_categories">What are you looking for?</string>
-    <string name="button_ready">Ready</string>
-    <string name="button_set">Set</string>
     <string name="placeholder_category_name">Category name</string>
-    <string name="button_go">Go</string>
     <string name="select_all">Select all</string>
     <string name="select_none">Select none</string>
+    <string name="button_go">Go</string>
     <string name="message_none_selected">You must select at least one category!</string>
-    <string name="button_start">Start</string>
-    <string name="cd_header">Skyline header</string>
-    <string name="sign_up">Sign up</string>
+
+    <!--ResultsFragment-->
+    <string name="cancel">Cancel</string>
+    <string name="adjust_parameters">Retry</string>
+    <string name="start">Start</string>
+    <string name="warning_error_search">An error has occurred while looking for landmarks</string>
+    <string name="venues_found">Found %1$d landmarks near your location.</string>
+    <string name="label_ready_journey">Are you ready to embark on your journey?</string>
+    <string name="button">Button</string>
 </resources>
