--- a/v0/app/src/main/res/values/strings.xml
+++ b/v0/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="sign_up">Sign up</string>
     <string name="sign_in_with_google">Continue with Google</string>
     <string name="sign_in_with_facebook">Continue with Facebook</string>
-    <string name="message_loading">Loading, please wait…</string>
+    <string name="message_loading">Loading…</string>
     <string name="error_password">Password must be at least 6 characters long.</string>
     <string name="error_email">Not a valid address.</string>
     <string name="message_sign_in_cancelled">Sign in attempt cancelled.</string>
@@ -65,7 +65,7 @@
     <string name="button_go">Go</string>
     <string name="message_none_selected">You must select at least one category!</string>
 
-    <!--ResultsFragment-->
+    <!--ResultFragment-->
     <string name="cancel">Cancel</string>
     <string name="adjust_parameters">Retry</string>
     <string name="start">Start</string>
@@ -73,4 +73,7 @@
     <string name="venues_found">Found %1$d landmarks near your location.</string>
     <string name="label_ready_journey">Are you ready to embark on your journey?</string>
     <string name="button">Button</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
