--- a/v0/app/src/main/res/values/strings.xml
+++ b/v0/app/src/main/res/values/strings.xml
@@ -44,9 +44,10 @@
     <!--StartFragment-->
     <string name="cd_header">Header Image</string>
     <string name="message_journey_start">A new adventure is waiting just around the corner</string>
-    <string name="message_journey_resume">Looks like you have started a session %1$s.\n\nDo you wish to continue?</string>
+    <string name="message_journey_resume">Do you wish to continue?</string>
+    <string name="message_journey_found">Looks like you have started a session %1$s.</string>
     <string name="ready">Ready</string>
-    <string name="warning_gps_required">GPS access is required to go further!</string>
+    <string name="warning_gps_required">GPS access is required!</string>
     <string name="resume">Resume</string>
     <string name="start_new">Start new</string>
     <string name="days_ago">days ago</string>
