Defined cloud use cases + Remodeled entites and cache + Refactoring

--- a/Final/presentation/src/main/res/values/strings.xml
+++ b/Final/presentation/src/main/res/values/strings.xml
@@ -112,9 +112,17 @@
     <string name="desc_unrecognized_photo">Unable to recognize the landmark, make sure that its not obfuscated and it is visible in its entirety</string>
     <string name="title_unrecognized_photo">Error</string>
     <string name="message_error_detection">An unexpected error has occurred, check your network connection! \n Message: %1$s</string>
-    <string name="message_landmark_Saved">The landmark\'s data has been stored successfully, you may resume to pursue a new one!</string>
+    <string name="message_landmark_Saved">The landmark\'s data has been stored successfully, you may move on to the next one!</string>
     <string name="title_landmark_saved">Success</string>
-    <string name="message_oops">Oops...</string>
+    <string name="message_oops">Oops…</string>
     <string name="message_no_landmarks">Could not find any new landmarks nearby. You may try adjusting the search parameters.</string>
     <string name="label_error">Error</string>
+    <string name="label_target">Target: %1$s</string>
+    <string name="label_distance">Your target is %1$.1f meters away</string>
+    <string name="label_remaining">There are %1$d landmarks remaining in your session</string>
+    <string name="label_hooray">Hooray!</string>
+    <string name="message_session_finished">You have discovered all the landmarks in this session!</string>
+    <string name="placeholder_target">Target name</string>
+    <string name="placeholder_remaining">Remaining landmarks</string>
+    <string name="placeholder_distance">Distance to target</string>
 </resources>
