Implemented the  whole goddamn thing :)

--- a/Final/presentation/src/main/res/values/strings.xml
+++ b/Final/presentation/src/main/res/values/strings.xml
@@ -126,15 +126,39 @@
     <string name="placeholder_remaining">Remaining landmarks</string>
     <string name="placeholder_distance">Distance to target</string>
     <string name="take_photo">Take photo</string>
-    <string name="label_save_progress">Save session progress</string>
+    <string name="label_save_progress">Save progress</string>
     <string name="message_error_basic">An unexpected error has occurred!</string>
     <string name="message_progress_saved">Your progress has been saved successfully!</string>
     <string name="label_good_job">Good job!</string>
-    <string name="label_load">Load from cloud</string>
-    <string name="message_no_session_found">No running session was found</string>
+    <string name="label_load">Load session</string>
+    <string name="message_no_session_found">No active session was found</string>
     <string name="message_error_operation">Couldn\'t perform operation, please check your internet connection!</string>
     <string name="message_error_signin">There was an error signing in, please check your credentials and your internet connection!</string>
     <string name="label_sign_up">Sign up</string>
     <string name="label_show">Show</string>
     <string name="message_error_signup">Failed to create account. There might already be an account registered with this email or no internet connection is available.</string>
+    <string name="number_placeholder">#1</string>
+    <string name="interval_placeholder">Interval: 14/6/2019 – 17/6/2019</string>
+    <string name="label_interval">Interval: %1$s - %2$s</string>
+    <string name="label_landmarks">%1$d total landmarks</string>
+    <string name="landmarks_placeholder">4 total landmarks</string>
+    <string name="cd_session_info">Session info</string>
+    <string name="message_no_sessions">No sessions recorded yet…</string>
+    <string name="label_sign_out">Sign out</string>
+    <string name="label_session_history">Session history</string>
+    <string name="title_navigation">Navigation</string>
+    <string name="title_home">Home</string>
+    <string name="title_categories">Categories</string>
+    <string name="title_discovered">Landmarks discovered</string>
+    <string name="title_image_capture">Image capture</string>
+    <string name="title_session_history">Session history</string>
+    <string name="label_now">Now</string>
+    <string name="label_finish_session">Finish session</string>
+    <string name="label_session_ended">Session data has been saved successfully.</string>
+    <string name="label_warning">Warning</string>
+    <string name="message_prompt_start">This will wipe all session progress as well as any active session backed up on the cloud. Do you wish to proceed?</string>
+    <string name="label_yes">Yes</string>
+    <string name="title_session_landmarks">Discovered landmarks</string>
+    <string name="message_no_landmarks_discovered">No landmarks have been discovered in this session…</string>
+    <string name="message_error_download_file">Failed to create download file…</string>
 </resources>
