--- a/Final/data/src/main/res/values/strings.xml
+++ b/Final/data/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">data</string>
+    <string name="download_enqueued">Image is downloading…</string>
+    <string name="download_finished">Image has been downloaded successfully!</string>
+    <string name="download_failed">Failed to download image…</string>
+    <string name="message_upload_enqueued">Uploading photo…</string>
+    <string name="message_upload_finished">Image uploaded successfully!</string>
+    <string name="message_upload_failed">Failed to upload photo…</string>
 </resources>
